# Reddit-Capstone-Project

./: README.md
Airflow/: Dockerfile  docker-compose.yml  pyproject.toml
Airflow/RedditProject/: pyproject.toml
Airflow/RedditProject/redditproject/: .user.yml  dbt_project.yml  profiles.yml
Airflow/mnt/dags/: GetComment.py  GetPost.py  test.py
Airflow/mnt/dags/staging/: CommentSubmission_Reddit_Data_2024-04-23T14:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-24T01:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-24T02:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-24T03:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-24T04:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-24T05:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-24T06:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-24T07:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-24T08:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-24T10:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-24T11:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-25T02:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-25T03:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-25T04:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-25T05:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-25T06:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-25T07:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-25T08:30:00+00:00.json  CommentSubmission_Reddit_Data_2024-04-25T23:30:00+00:00.json  (+61 more)
my_Reddit_project/: pyproject.toml
