[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["uthai65130132 <142646070+uthai65130132@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
praw = "^7.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
