[tool.poetry]
name = "redditproject"
version = "0.1.0"
description = ""
authors = ["uthai65130132 <142646070+uthai65130132@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.7.13"
dbt-postgres = "^1.7.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
